--- a/Medico/Components/Layout/MainLayout.razor
+++ b/Medico/Components/Layout/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<Medico.Components.Layout.Menu></Medico.Components.Layout.Menu>
+
 @Body
 
 <div id="blazor-error-ui">
